--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
+    "react-scripts": "^5.0.1",
     "sass": "^1.89.1",
     "swiper": "^11.2.8"
   },
