Update base URLs for production

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # Base URL for API requests
-VITE_IMAGE_BASE_URL=http://127.0.0.1:8000/storage/product-images
-VITE_API_BASE_URL=http://127.0.0.1:8000
+VITE_IMAGE_BASE_URL=https://goldentrail.az/storage/product-images
+VITE_API_BASE_URL=https://goldentrail.az
