--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Base URL for API requests
-VITE_API_BASE_URL=http://localhost:8000
-VITE_IMAGE_BASE_URL=http://localhost:8000/storage/product-images
+VITE_API_BASE_URL=https://goldentrail.az
+VITE_IMAGE_BASE_URL=https://goldentrail.az/storage/product-images
